--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2XalkHvKmdL-YiMryFbtaTD0le_G8vjplrtklD7Mwo9jk6eXMNMul-CI&s=10" class="moviePic">
+		<p class="movieDetail">lorem djejdjdklwnwndkslsnsssooskssbbsbsbsjsiwwosjs iskdbsbsjsks jsksks</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
